# bce-fpga-dev-kit

./: .gitignore  LICENSE.txt  Q&A.md  README.md  readme.txt
driver/: Makefile  mmconfig-shared.c  mmconfig_64.c  xdma-core.c  xvc-core.c  xvc-mmconfig_64.c  xvc_pcie_driver.c  xvc_pcie_driver_base.c
hdk/baidu_hw_design_toolkit/: readme.md  readme.txt
hdk/baidu_hw_design_toolkit/common_files/constraints/: debug_bridge.xdc  pblock.xdc  rp_bd_wrapper_ooc.xdc  rp_wrapper_dbg_ooc.xdc  rp_wrapper_ooc.xdc  xsdbm_timing_exception.xdc
hdk/baidu_hw_design_toolkit/common_files/hdl/: app_ddr_sig_declare.vh  axi_ddr_sig_declare.vh  mig_wrapper.v  mig_wrapper_if_app.vh  mig_wrapper_if_axi.vh  mig_wrapper_if_ddr.vh  mig_wrapper_port_app.vh  mig_wrapper_port_axi.vh  mig_wrapper_port_ddr.vh  rp_axi_master.vh  rp_bd_wrapper.v  rp_if_axiddr.vh  rp_port_app.vh  rp_port_axiddr.vh  rp_wrapper.v  rp_wrapper_port.vh
hdk/baidu_hw_design_toolkit/common_files/ip/ddr4_0/: ddr4_0.veo  ddr4_0.vho  ddr4_0.xci  ddr4_0.xml
hdk/baidu_hw_design_toolkit/common_files/ref_xdc/: ddr_c0.xdc  ddr_c1.xdc  ddr_c2.xdc  ddr_c3.xdc
hdk/baidu_hw_design_toolkit/common_files/sim/bfm/: axi_l_master_bfm.v  axi_master_bfm.v  axi_req_mux1.v  dma_engine.v  mem_req_mux1.v  round_robin_4.v
hdk/baidu_hw_design_toolkit/common_files/sim/filelists/: ddr.vivado.f  tb.vivado.f
hdk/baidu_hw_design_toolkit/common_files/sim/module/: axi_crossbar_5s_1m.v  fifo_sync_blk_fwft_576x16_latency_0.v  fifo_sync_blk_fwft_576x512_latency_0.v  fifo_sync_dist_fwft_4x64_latency_0.v  fifo_sync_dist_fwft_64x16_latency_0.v  fifo_sync_dist_fwft_80x16_latency_0.v
hdk/baidu_hw_design_toolkit/common_files/sim/script/: build_ip_simfiles.tcl  build_ipi_simfiles.tcl  build_sim_prj.tcl  (+1 more)
hdk/baidu_hw_design_toolkit/common_files/template/: create_prj.sh
hdk/bin_pr_tools/: load_pr_bin.sh
hdk/bin_pr_tools/mcap/: mcap
hdk/doc/: stepbystep-制作并调试FPGAdemo逻辑.md  实验-为demo工程添加DDR控制器.md  说明-FPGA云镜像工程结构.md  说明-demo工程介绍.md  说明-仿真环境介绍.md  说明-在FPGA云服务器中使用DDR.md  说明-进行FPGA云镜像开发的流程.md
hdk/xvc_server/: xvc_pcie.c  xvc_pcie_ioctl.h  xvcserver.h
include/: mmconfig.h  xdma-core.h  xvc-mmconfig.h  xvc-pcie-ioctl.h  xvc-pcie-user-config.h  xvc_pcie_driver.h  xvc_pcie_ioctl.h  xvc_pcie_user_config.h
noah/: README.md  common.sh  get_fpga_temperature.sh  is_fpga_installed.sh  mmap_readq.c
old/baidu_hw_design_toolkit/: readme.txt
old/baidu_hw_design_toolkit/.Xil/: rp_bd_wrapper_propImpl.xdc
old/baidu_hw_design_toolkit/common_files/hdl/: rp_bd_wrapper.v  usr_ddr4_define.vh
old/baidu_hw_design_toolkit/common_files/ref_xdc/: ddr_c0.xdc  ddr_c1.xdc  ddr_c2.xdc  ddr_c3.xdc
old/baidu_hw_design_toolkit/usr_files/usr_rtl/: rp_bd.v  usr_counter.v
old/baidu_hw_design_toolkit/usr_files/usr_xdc/: usr.xdc
old/xdma_xvc_driver/driver/: Makefile  xdma-core.c  xdma-ioctl.c  xdma-sgm.c  xvc-pcie-driver.c
old/xdma_xvc_driver/include/: xdma-core.h  xvc-pcie-user-config.h
old/xdma_xvc_driver/sample/: Makefile  fpga_cloud.h
old/xdma_xvc_driver/tests/: Makefile  dma_to_device.c  performance.c  reg_rw.c
old/xvc_server/: Makefile  xvc_pcie.c  xvc_pcie_ioctl.h  xvcserver.c  xvcserver.h
sample/: Makefile  reg_read_32.cpp  sample.cpp
sdk/: README.md
sdk/doc/: README.md
sdk/linux_kernel_driver/: README.md  readme.txt
sdk/linux_kernel_driver/driver/: Makefile  extensible_framework.c  xdma-bit.c  xdma-core.c  xdma-ioctl.c  xdma-sgm.c  xvc-core.c  xvc-mmconfig-shared.c  xvc-mmconfig_64.c  xvc-pcie-driver.c
sdk/linux_kernel_driver/include/: mcap_registers.h  perfmon_parameters.h  xbar_sys_parameters.h  xclbin.h  xdma-core.h  xdma-ioctl.h  xdma-sgm.h  xvc-core.h  xvc-mmconfig.h  xvc-pcie-driver.h  xvc-pcie-ioctl.h  xvc-pcie-user-config.h
sdk/linux_kernel_driver/sample/: CMakeLists.txt  Makefile  dma_check.cpp  fpga_cloud.cpp  fpga_cloud.h  ioctl_test.cpp  mmap_read.c  mmap_readq.c  mmap_write.c  mmap_writeq.c  reg_read_32.cpp  reg_write_32.cpp  sample.cpp  sample_ioctl.cpp  sample_user_irq.cpp  sample_vectoradd_ddr.cpp  timing.h
sdk/linux_kernel_driver/tests/: load_driver.sh  reg_rw.c
sdk/llapi/: CMakeLists.txt  llapi.cpp  llapi.h
sdk/mgmt_tool/: CMakeLists.txt  README.md  base  bce_fpga_mgmt_tool.cpp  fd_guard.h  md5.c  string_printf.cpp  string_printf.h
sdk/mgmt_tools/: CMakeLists.txt  README.md  bce_fpga_mgmt_tool.cpp  config.h.in
tests/: dma_from_device.c  reg_rw.c
(+345 files in other folders)
